app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: kserge2001/pod-host
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "250Mi"
          requests:
            memory: "150Mi"
