pod.yaml
apiVersion: v1
kind: Pod
metadata:
  
  name: "app1"
  labels:
    app: "app1"
spec:
  
  containers:
  - name: app1
    image: nginx
    volumeMounts:
        - name: efs-volume
          mountPath: /mypod
  volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-pvc
    
    
    
    
    #ports:
    #- containerPort:  80
  #- name: redis   #sidecar or init
    #image: redis
