app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    app: nginx
spec:
  type: LoadBalancer
  #type: ClusterIP
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
