external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendorapp
  namespace: dev
spec:
  type: ExternalName
  externalName: devops.aws1.com
