resume-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  labels:
    app: my-resume
spec:
  type: LoadBalancer
  selector:
    app: my-resume
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
